[metadata]
name = ampersand
description = The Ampersand Virtual Machine
author = SamimiesGames
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    ampersand
python_requires = >=3.10.0
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24

[options.package_data]
ampersand = py.typed